--- a/index.html
+++ b/index.html
@@ -14,14 +14,21 @@
             font-size: 2em;
             margin-top: 20px;
         }
+        #hello-world {
+            display: none;
+        }
     </style>
 </head>
 <body>
-    <h1>Hello World!</h1>
     <div id="countdown">10</div>
+    <div id="hello-world">
+        <h1>Hello World!</h1>
+        <img src="https://media.giphy.com/media/ASd0Ukj0y3qMM/giphy.gif" alt="Funny GIF">
+    </div>
     <script>
         let countdownValue = 10;
         const countdownElement = document.getElementById('countdown');
+        const helloWorldElement = document.getElementById('hello-world');
         
         const countdownInterval = setInterval(() => {
             countdownValue--;
@@ -29,7 +36,8 @@
             
             if (countdownValue <= 0) {
                 clearInterval(countdownInterval);
-                countdownElement.textContent = "Time's up!";
+                countdownElement.style.display = 'none';
+                helloWorldElement.style.display = 'block';
             }
         }, 1000);
     </script>
